@@ -39,6 +39,9 @@ GETTEXT_FILES = \
 PKGCONFIG_FILES = \
 	libfwps.pc.in
 
+SETUP_PY_FILES = \
+	setup.py
+
 SPEC_FILES = \
 	libfwps.spec \
 	libfwps.spec.in
@@ -47,6 +50,7 @@ EXTRA_DIST = \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
+	$(SETUP_PY_FILES) \
 	$(SPEC_FILES)
 
 MAINTAINERCLEANFILES = \
